Fix data types